# WanderAPI

./: Cargo.toml  Rocket.toml  Rocket.toml.example
migrations/2019-03-26-203416_hiking_trails/: down.sql  up.sql
migrations/2019-03-26-204602_pois/: down.sql  up.sql
src/: database.rs  main.rs  models.rs  routes.rs  schema.rs
src/graphql/: models.rs  schema.rs
templates/: base.html.tera
templates/errors/: 405.html.tera
