[package]
name = "WanderAPI"
version = "0.1.0"
authors = ["MTRNord <mtrnord1@gmail.com>"]
edition = "2018"

[dependencies]
juniper = "0.11"
juniper_warp = "0.2.0"
warp = "0.1.14"
postgres-derive = "0.3"
env_logger = "0.6.1"
log = "0.4.6"
docopt = "1"
serde = "1.0"
serde_derive = "1.0"

[dependencies.postgres]
version = "0.15"
features = ["with-native-tls"]